# glin-client

./: .env.example  CONTRIBUTING.md  Cargo.toml  README.md
python/: train.py
python/utils/: __init__.py  compression.py  gradient.py
src/: config.rs  error.rs  lib.rs  main.rs
src/api/: client.rs  mod.rs  types.rs
src/cli/: benchmark.rs  mod.rs  register.rs  start.rs  status.rs
src/gpu/: benchmark.rs  detector.rs  mod.rs
src/storage/: cache.rs  ipfs.rs  mod.rs
src/worker/: gpu_monitor.rs  mod.rs  training.rs
tests/: api_tests.rs  integration_tests.rs
